# review_bot

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: reviews.py
data/: categories.json
model/qwen.25/: train.ipynb
scripts/: benchmark.py  bootstrap_label.py  demo_image.py  export_app_reviews.py  export_coreml.py  export_tflite.py  split_dataset.py  train_product.py  train_receipt.py
src/: index.js
src/cashlog/: __init__.py  categories.py  config.py  dataset.py  pipeline.py  reviews.py  router.py  types.py
src/cashlog/product/: __init__.py  classifier.py  embedder.py  export.py  zeroshot.py
src/cashlog/receipt/: __init__.py  ocr.py  parser.py  text_classifier.py
src/cashlog/vlm/: __init__.py  qwen_vl.py
